kubeview/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: kubeview
    app.kubernetes.io/name: kubeview
  name: kubeview
  namespace: kubeview
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: kubeview
      app.kubernetes.io/name: kubeview
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: kubeview
        app.kubernetes.io/name: kubeview
    spec:
      serviceAccountName: kubeview
      containers:
        - name: kubeview
          image: ghcr.io/benc-uk/kubeview:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
              name: http
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
          readinessProbe:
            httpGet:
              path: /health
              port: 8000
          resources:
            limits:
              cpu: 50m
              memory: 64Mi
            requests:
              cpu: 50m
              memory: 64Mi
