kubeview/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: kubeview
    app.kubernetes.io/name: kubeview
  name: kubeview
  namespace: kubeview
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      protocol: TCP
      targetPort: 8000
  selector:
    app.kubernetes.io/instance: kubeview
    app.kubernetes.io/name: kubeview
